--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Модуль 1 Основы HTML</title>
+    <title>Модуль 2 Основы CSS
+    </title>
   </head>
   <body>
     <header>
