--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Модуль 2 Основы CSS
-    </title>
+    <title>Модуль 2 Основы CSS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">Web Studio</a>
+        <a href="./index.html" class="item">Web Studio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
@@ -55,10 +61,11 @@
             </p>
           </li>
           <li>
-            <!--Обязательно применять тег <p>?-->
             <h3>Современные технологии</h3>
-            Значимость этих проблем настолько очевидна, что реализация плановых
-            заданий.
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
