--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="item">Web Studio</a>
+        <a href="./index.html" style="font-family: 'Raleway', sans-serif"
+          >Web Studio</a
+        >
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
@@ -33,7 +35,9 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button type="button">Заказать услугу</button>
+        <button type="button" style="font-family: 'Roboto', sans-serif">
+          Заказать услугу
+        </button>
       </section>
 
       <!--Наши аспекты-->
@@ -151,7 +155,9 @@
 
     <!--Подвал-->
     <footer>
-      <a href="./index.html">Web Studio</a>
+      <a href="./index.html" style="font-family: 'Raleway', sans-serif"
+        >Web Studio</a
+      >
       <address>г. Киев, пр-т Леси Украинки, 26</address>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+380961111111">+38 096 111 11 11</a>
