--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -17,7 +17,9 @@
     <!--Шапка-->
     <header>
       <nav>
-        <a href="./index.html">Web Studio </a>
+        <a href="./index.html" style="font-family: 'Raleway', sans-serif"
+          >Web Studio
+        </a>
         <ul>
           <li><a href="./index.html">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -32,11 +34,31 @@
       <section>
         <!--Кнопки навигации-->
         <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб сайт</button></li>
-          <li><button type="button">Приложение</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li>
+            <button type="button" style="font-family: 'Roboto', sans-serif">
+              Все
+            </button>
+          </li>
+          <li>
+            <button type="button" style="font-family: 'Roboto', sans-serif">
+              Веб сайт
+            </button>
+          </li>
+          <li>
+            <button type="button" style="font-family: 'Roboto', sans-serif">
+              Приложение
+            </button>
+          </li>
+          <li>
+            <button type="button" style="font-family: 'Roboto', sans-serif">
+              Дизайн
+            </button>
+          </li>
+          <li>
+            <button type="button" style="font-family: 'Roboto', sans-serif">
+              Маркетинг
+            </button>
+          </li>
         </ul>
 
         <!--Контейнеры проектов-->
@@ -137,7 +159,9 @@
 
     <!--Подвал-->
     <footer>
-      <a href="./index.html">Web Studio</a>
+      <a href="./index.html" style="font-family: 'Raleway', sans-serif"
+        >Web Studio</a
+      >
       <address>г. Киев, пр-т Леси Украинки, 26</address>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+380961111111">+38 096 111 11 11</a>
