--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" style="font-family: 'Raleway', sans-serif"
-          >Web Studio</a
+        <a
+          href="./index.html"
+          class="link_logo"
+          lang="en"
+          style="font-family: 'Raleway', sans-serif"
+          >Web <span class="logo">Studio</span></a
         >
         <ul>
           <li><a href="">Студия</a></li>
@@ -155,8 +159,12 @@
 
     <!--Подвал-->
     <footer>
-      <a href="./index.html" style="font-family: 'Raleway', sans-serif"
-        >Web Studio</a
+      <a
+        href="./index.html"
+        class="link_logo"
+        lang="en"
+        style="font-family: 'Raleway', sans-serif"
+        >Web <span class="logo">Studio</span></a
       >
       <address>г. Киев, пр-т Леси Украинки, 26</address>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
