--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,14 @@
     <!--Шапка-->
     <header>
       <nav>
-        <a href="./index.html" style="font-family: 'Raleway', sans-serif"
-          >Web Studio
-        </a>
+        <a
+          href="./index.html"
+          class="link_logo"
+          lang="en"
+          style="font-family: 'Raleway', sans-serif"
+          >Web <span class="logo">Studio</span></a
+        >
+
         <ul>
           <li><a href="./index.html">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -159,8 +164,12 @@
 
     <!--Подвал-->
     <footer>
-      <a href="./index.html" style="font-family: 'Raleway', sans-serif"
-        >Web Studio</a
+      <a
+        href="./index.html"
+        class="link_logo"
+        lang="en"
+        style="font-family: 'Raleway', sans-serif"
+        >Web <span class="logo">Studio</span></a
       >
       <address>г. Киев, пр-т Леси Украинки, 26</address>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
