--- a/index.html
+++ b/index.html
@@ -14,32 +14,40 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="header">
+      <nav class="header-navigation">
         <a
           href="./index.html"
-          class="link_logo"
+          class="header-link-logo"
           lang="en"
           style="font-family: 'Raleway', sans-serif"
           >Web <span class="logo">Studio</span></a
         >
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="header-list">
+          <li class="header-item"><a href="" class="link">Студия</a></li>
+          <li class="header-item">
+            <a href="./portfolio.html" class="link">Портфолио</a>
+          </li>
+          <li class="header-item"><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <a href="mailto:info@devstudio.com" class="header-link-mail"
+        >info@devstudio.com</a
+      >
+      <a href="tel:+380961111111" class="header-link-tel">+38 096 111 11 11</a>
     </header>
     <main>
       <!--Герой-->
-      <section>
-        <h1>
+      <section class="hero">
+        <h1 class="hero-title">
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button type="button" style="font-family: 'Roboto', sans-serif">
+        <button
+          type="button"
+          class="btn"
+          style="font-family: 'Roboto', sans-serif"
+        >
           Заказать услугу
         </button>
       </section>
@@ -48,14 +56,6 @@
       <section>
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
