--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!--Шапка-->
     <header class="header">
       <nav class="header-navigation">
         <a
@@ -24,16 +25,18 @@
           >Web <span class="logo">Studio</span></a
         >
         <ul class="header-list">
-          <li class="header-item"><a href="" class="link">Студия</a></li>
           <li class="header-item">
-            <a href="./portfolio.html" class="link">Портфолио</a>
+            <a href="" class="header-current">Студия</a>
           </li>
-          <li class="header-item"><a href="" class="link">Контакты</a></li>
+          <li class="header-item">
+            <a href="./portfolio.html" class="header-link">Портфолио</a>
+          </li>
+          <li class="header-item">
+            <a href="" class="header-link">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com" class="header-link-mail"
-        >info@devstudio.com</a
-      >
+      <a href="mailto:info@devstudio.com" class="header-link-mail">info@devstudio.com</a>
       <a href="tel:+380961111111" class="header-link-tel">+38 096 111 11 11</a>
     </header>
     <main>
@@ -46,31 +49,38 @@
         <button
           type="button"
           class="btn"
-          style="font-family: 'Roboto', sans-serif"
-        >
+          style="font-family: 'Roboto', sans-serif">
           Заказать услугу
         </button>
       </section>
 
       <!--Наши аспекты-->
-      <section>
-        <ul>
-          <li>
-            <p>
+      <section class="about">
+        <ul  class="about-list">
+          <li class="about-item">
+            <h3 class="about-h3">Внимание к деталям</h3>
+            <p class="about-text">
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li class="about-item">
+            <h3 class="about-h3">Пунктуальность</h3>
+            <p class="about-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
-          </li>
+          </li class="about-item">
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="about-h3">Планирование</h3>
+            <p class="about-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
-          </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>
+          </li >
+          <li class="about-item"> 
+            <h3 class="about-h3">Современные технологии</h3>
+            <p class="about-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -79,10 +89,10 @@
       </section>
 
       <!--Чем мы занимаемся-->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
+      <section class="doing">
+        <h2 class="about-h2">Чем мы занимаемся</h2>
+        <ul class="about-list">
+          <li class="about-item">
             <img
               src="./images/box1.jpg"
               width="370"
@@ -90,7 +100,7 @@
               alt="Верстка продукта"
             />
           </li>
-          <li>
+          <li class="about-item">
             <img
               src="./images/box2.jpg"
               width="370"
@@ -98,7 +108,7 @@
               alt="Оптимизация сайта"
             />
           </li>
-          <li>
+          <li class="about-item">
             <img
               src="./images/box3.jpg"
               width="370"
@@ -111,47 +121,47 @@
 
       <!--Наща команда-->
       <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+        <h2 class="about-h2">Наша команда</h2>
+        <ul class="about-list">
+          <li class="about-item">
             <img
               src="./images/Designer.jpg"
               width="270"
               height="260"
               alt="Дизайнер продукта"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="about-h3">Игорь Демьяненко</h3>
+            <p class="about-text">Product Designer</p>
           </li>
-          <li>
+          <li class="about-item">
             <img
               src="./images/Developer.jpg"
               width="270"
               height="260"
               alt="Фронтенд разработчик"
             />
-            <h3>Product Designer</h3>
-            <p>Frontend Developer</p>
+            <h3 class="about-h3">Product Designer</h3>
+            <p class="about-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="about-item">
             <img
               src="./images/Marketing.jpg"
               width="270"
               height="260"
               alt="Маркетолог"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="about-h3">Николай Тарасов</h3>
+            <p class="about-text">Marketing</p>
           </li>
-          <li>
+          <li class="about-item">
             <img
               src="./images/UI.jpg"
               width="270"
               height="260"
               alt="Дизайнер интерфейса"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="about-h3">Михаил Ермаков</h3>
+            <p class="about-text">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -161,7 +171,7 @@
     <footer>
       <a
         href="./index.html"
-        class="link_logo"
+        class="header-link-logo"
         lang="en"
         style="font-family: 'Raleway', sans-serif"
         >Web <span class="logo">Studio</span></a
