--- a/portfolio.html
+++ b/portfolio.html
@@ -15,51 +15,58 @@
   </head>
   <body>
     <!--Шапка-->
-    <header>
-      <nav>
+    <header class="header">
+      <nav class="header-navigation">
         <a
           href="./index.html"
-          class="link_logo"
+          class="header-link-logo"
           lang="en"
           style="font-family: 'Raleway', sans-serif"
           >Web <span class="logo">Studio</span></a
         >
-
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="header-list">
+          <li class="header-item">
+            <a href="./index.html" class="header-link">Студия</a>
+          </li>
+          <li class="header-item">
+            <a href="" class="header-current">Портфолио</a>
+          </li>
+          <li class="header-item">
+            <a href="" class="header-link">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <a href="mailto:info@devstudio.com" class="header-mail"
+        >info@devstudio.com</a
+      >
+      <a href="tel:+380961111111" class="header-link-tel">+38 096 111 11 11</a>
     </header>
 
     <main>
-      <section>
+      <section class="btn prtf">
         <!--Кнопки навигации-->
-        <ul>
-          <li>
+        <ul class="btn-list">
+          <li class="btn-item">
             <button type="button" style="font-family: 'Roboto', sans-serif">
               Все
             </button>
           </li>
-          <li>
+          <li class="btn-item">
             <button type="button" style="font-family: 'Roboto', sans-serif">
               Веб сайт
             </button>
           </li>
-          <li>
+          <li class="btn-item">
             <button type="button" style="font-family: 'Roboto', sans-serif">
               Приложение
             </button>
           </li>
-          <li>
+          <li class="btn-item">
             <button type="button" style="font-family: 'Roboto', sans-serif">
               Дизайн
             </button>
           </li>
-          <li>
+          <li class="btn-item">
             <button type="button" style="font-family: 'Roboto', sans-serif">
               Маркетинг
             </button>
@@ -67,96 +74,96 @@
         </ul>
 
         <!--Контейнеры проектов-->
-        <ul>
-          <li>
+        <ul class="-list-about">
+          <li class="item-about">
             <img
               src="./images/portfolio1.jpg"
               width="370"
               height="294"
               alt="Лептоп с сайтом"
             />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <h3 class="h3-about">Технокряк</h3>
+            <p class="text-about">Веб-сайт</p>
           </li>
-          <li>
+          <li class="item-about">
             <img
               src="./images/portfolio2.jpg"
               width="370"
               height="294"
               alt="НБА высшая лига"
             />
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <h3 class="h3-about">Постер New Orlean vs Golden Star</h3>
+            <p class="text-about">Дизайн</p>
           </li>
-          <li>
+          <li class="item-about">
             <img
               src="./images/portfolio3.jpg"
               width="370"
               height="294"
               alt="Ресторан морских продуктов"
             />
-            <h3>Ресторан Seafood</h3>
-            <p>Приложение</p>
+            <h3 class="h3-about">Ресторан Seafood</h3>
+            <p class="text-about">Приложение</p>
           </li>
-          <li>
+          <li class="item-about">
             <img
               src="./images/portfolio4.jpg"
               width="370"
               height="294"
               alt="Наушники закрытого типа"
             />
-            <h3>Проект Prime</h3>
-            <p>Маркетинг</p>
+            <h3 class="h3-about">Проект Prime</h3>
+            <p class="text-about">Маркетинг</p>
           </li>
-          <li>
+          <li class="item-about">
             <img
               src="./images/portfolio5.jpg"
               width="370"
               height="294"
               alt="Коробки с логатипами продукции"
             />
-            <h3>Проект Boxes</h3>
-            <p>Приложение</p>
+            <h3 class="h3-about">Проект Boxes</h3>
+            <p class="text-about">Приложение</p>
           </li>
-          <li>
+          <li class="item-about">
             <img
               src="./images/portfolio6.jpg"
               width="370"
               height="294"
               alt="Моноблок с веб страницой"
             />
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <h3 class="h3-about">Inspiration has no Borders</h3>
+            <p class="text-about">Веб-сайт</p>
           </li>
-          <li>
+          <li class="item-about">
             <img
               src="./images/portfolio7.jpg"
               width="370"
               height="294"
               alt="Развернутая книга"
             />
-            <h3>Издание Limited Edition</h3>
-            <p>Дизайн</p>
+            <h3 class="h3-about">Издание Limited Edition</h3>
+            <p class="text-about">Дизайн</p>
           </li>
-          <li>
+          <li class="item-about">
             <img
               src="./images/portfolio8.jpg"
               width="370"
               height="294"
               alt="Ярлык лаборатории"
             />
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
+            <h3 class="h3-about">Проект LAB</h3>
+            <p class="text-about">Маркетинг</p>
           </li>
-          <li>
+          <li class="item-about">
             <img
               src="./images/portfolio9.jpg"
               width="370"
               height="294"
               alt="Рабочий процесс за ноутбуком"
             />
-            <h3>Growing Business</h3>
-            <p>Приложение</p>
+            <h3 class="h3-about">Growing Business</h3>
+            <p class="text-about">Приложение</p>
           </li>
         </ul>
       </section>
@@ -166,7 +173,7 @@
     <footer>
       <a
         href="./index.html"
-        class="link_logo"
+        class="header-link-logo"
         lang="en"
         style="font-family: 'Raleway', sans-serif"
         >Web <span class="logo">Studio</span></a
