--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
     </header>
 
     <main>
-      <section class="btn prtf">
+      <section class="btn-prtf">
         <!--Кнопки навигации-->
         <ul class="btn-list">
           <li class="btn-item">
