--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!--Шапка-->
-    <header class="header">
+    <header class="header link">
       <nav class="header-navigation">
         <a
           href="./index.html"
@@ -26,18 +26,18 @@
         >
         <ul class="header-list">
           <li class="header-item">
-            <a href="" class="header-current">Студия</a>
+            <a href="" class="header-current link">Студия</a>
           </li>
           <li class="header-item">
-            <a href="./portfolio.html" class="header-link">Портфолио</a>
+            <a href="./portfolio.html" class="header-link link">Портфолио</a>
           </li>
           <li class="header-item">
-            <a href="" class="header-link">Контакты</a>
+            <a href="" class="header-link link">Контакты</a>
           </li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com" class="header-link-mail">info@devstudio.com</a>
-      <a href="tel:+380961111111" class="header-link-tel">+38 096 111 11 11</a>
+      <a href="mailto:info@devstudio.com" class="header-link-mail link">info@devstudio.com</a>
+      <a href="tel:+380961111111" class="header-link-tel link">+38 096 111 11 11</a>
     </header>
     <main>
       <!--Герой-->
@@ -130,55 +130,55 @@
               height="260"
               alt="Дизайнер продукта"
             />
-            <h3 class="about-h3">Игорь Демьяненко</h3>
-            <p class="about-text">Product Designer</p>
+            <h3 class="team-h3">Игорь Демьяненко</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li class="about-item">
+          <li class="team-item">
             <img
               src="./images/Developer.jpg"
               width="270"
               height="260"
               alt="Фронтенд разработчик"
             />
-            <h3 class="about-h3">Product Designer</h3>
-            <p class="about-text">Frontend Developer</p>
+            <h3 class="team-h3">Product Designer</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li class="about-item">
+          <li class="team-item">
             <img
               src="./images/Marketing.jpg"
               width="270"
               height="260"
               alt="Маркетолог"
             />
-            <h3 class="about-h3">Николай Тарасов</h3>
-            <p class="about-text">Marketing</p>
+            <h3 class="team-h3">Николай Тарасов</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li class="about-item">
+          <li class="team-item">
             <img
               src="./images/UI.jpg"
               width="270"
               height="260"
               alt="Дизайнер интерфейса"
             />
-            <h3 class="about-h3">Михаил Ермаков</h3>
-            <p class="about-text">UI Designer</p>
+            <h3 class="team-h3">Михаил Ермаков</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!--Подвал-->
-    <footer>
+    <footer class="footer">
       <a
         href="./index.html"
-        class="header-link-logo"
+        class="footer-link-logo"
         lang="en"
         style="font-family: 'Raleway', sans-serif"
-        >Web <span class="logo">Studio</span></a
+        >Web <span class="footer-logo">Studio</span></a
       >
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <address class="adres">г. Киев, пр-т Леси Украинки, 26</address>
+      <a href="mailto:info@devstudio.com" class="footer-link-mail link">info@devstudio.com</a>
+      <a href="tel:+380961111111" class="footer-link-tel link">+38 096 111 11 11</a>
     </footer>
   </body>
 </html>
