--- a/portfolio.html
+++ b/portfolio.html
@@ -26,20 +26,22 @@
         >
         <ul class="header-list">
           <li class="header-item">
-            <a href="./index.html" class="header-link">Студия</a>
+            <a href="./index.html" class="header-link link">Студия</a>
           </li>
           <li class="header-item">
-            <a href="" class="header-current">Портфолио</a>
+            <a href="" class="header-current link">Портфолио</a>
           </li>
           <li class="header-item">
-            <a href="" class="header-link">Контакты</a>
+            <a href="" class="header-link link">Контакты</a>
           </li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com" class="header-mail"
+      <a href="mailto:info@devstudio.com" class="header-link-mail link"
         >info@devstudio.com</a
       >
-      <a href="tel:+380961111111" class="header-link-tel">+38 096 111 11 11</a>
+      <a href="tel:+380961111111" class="header-link-tel link"
+        >+38 096 111 11 11</a
+      >
     </header>
 
     <main>
@@ -47,27 +49,47 @@
         <!--Кнопки навигации-->
         <ul class="btn-list">
           <li class="btn-item">
-            <button type="button" style="font-family: 'Roboto', sans-serif">
+            <button
+              type="button"
+              style="font-family: 'Roboto', sans-serif"
+              class="btn-one"
+            >
               Все
             </button>
           </li>
           <li class="btn-item">
-            <button type="button" style="font-family: 'Roboto', sans-serif">
+            <button
+              type="button"
+              style="font-family: 'Roboto', sans-serif"
+              class="btn-two"
+            >
               Веб сайт
             </button>
           </li>
           <li class="btn-item">
-            <button type="button" style="font-family: 'Roboto', sans-serif">
+            <button
+              type="button"
+              style="font-family: 'Roboto', sans-serif"
+              class="btn-three"
+            >
               Приложение
             </button>
           </li>
           <li class="btn-item">
-            <button type="button" style="font-family: 'Roboto', sans-serif">
+            <button
+              type="button"
+              style="font-family: 'Roboto', sans-serif"
+              class="btn-four"
+            >
               Дизайн
             </button>
           </li>
           <li class="btn-item">
-            <button type="button" style="font-family: 'Roboto', sans-serif">
+            <button
+              type="button"
+              style="font-family: 'Roboto', sans-serif"
+              class="btn-five"
+            >
               Маркетинг
             </button>
           </li>
@@ -170,17 +192,21 @@
     </main>
 
     <!--Подвал-->
-    <footer>
+    <footer class="footer">
       <a
         href="./index.html"
-        class="header-link-logo"
+        class="footer-link-logo"
         lang="en"
         style="font-family: 'Raleway', sans-serif"
-        >Web <span class="logo">Studio</span></a
+        >Web <span class="footer-logo">Studio</span></a
       >
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <address class="adres">г. Киев, пр-т Леси Украинки, 26</address>
+      <a href="mailto:info@devstudio.com" class="footer-link-mail link"
+        >info@devstudio.com</a
+      >
+      <a href="tel:+380961111111" class="footer-link-tel link"
+        >+38 096 111 11 11</a
+      >
     </footer>
   </body>
 </html>
