--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
           </li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com" class="header-link-mail link">info@devstudio.com</a>
-      <a href="tel:+380961111111" class="header-link-tel link">+38 096 111 11 11</a>
+      <a href="mailto:info@devstudio.com" class="header-link-mail link"
+        >info@devstudio.com</a
+      >
+      <a href="tel:+380961111111" class="header-link-tel link"
+        >+38 096 111 11 11</a
+      >
     </header>
     <main>
       <!--Герой-->
@@ -49,14 +53,15 @@
         <button
           type="button"
           class="btn"
-          style="font-family: 'Roboto', sans-serif">
+          style="font-family: 'Roboto', sans-serif"
+        >
           Заказать услугу
         </button>
       </section>
 
       <!--Наши аспекты-->
       <section class="about">
-        <ul  class="about-list">
+        <ul class="about-list">
           <li class="about-item">
             <h3 class="about-h3">Внимание к деталям</h3>
             <p class="about-text">
@@ -70,15 +75,15 @@
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
-          </li class="about-item">
-          <li>
+          </li>
+          <li class="about-item">
             <h3 class="about-h3">Планирование</h3>
             <p class="about-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
-          </li >
-          <li class="about-item"> 
+          </li>
+          <li class="about-item">
             <h3 class="about-h3">Современные технологии</h3>
             <p class="about-text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -177,8 +182,12 @@
         >Web <span class="footer-logo">Studio</span></a
       >
       <address class="adres">г. Киев, пр-т Леси Украинки, 26</address>
-      <a href="mailto:info@devstudio.com" class="footer-link-mail link">info@devstudio.com</a>
-      <a href="tel:+380961111111" class="footer-link-tel link">+38 096 111 11 11</a>
+      <a href="mailto:info@devstudio.com" class="footer-link-mail link"
+        >info@devstudio.com</a
+      >
+      <a href="tel:+380961111111" class="footer-link-tel link"
+        >+38 096 111 11 11</a
+      >
     </footer>
   </body>
 </html>
