--- a/index.html
+++ b/index.html
@@ -50,13 +50,7 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button
-          type="button"
-          class="btn"
-          style="font-family: 'Roboto', sans-serif"
-        >
-          Заказать услугу
-        </button>
+        <button type="button" class="btn">Заказать услугу</button>
       </section>
 
       <!--Наши аспекты-->
