--- a/portfolio.html
+++ b/portfolio.html
@@ -49,49 +49,19 @@
         <!--Кнопки навигации-->
         <ul class="btn-list">
           <li class="btn-item">
-            <button
-              type="button"
-              style="font-family: 'Roboto', sans-serif"
-              class="btn-one"
-            >
-              Все
-            </button>
+            <button type="button" class="btn-one">Все</button>
           </li>
           <li class="btn-item">
-            <button
-              type="button"
-              style="font-family: 'Roboto', sans-serif"
-              class="btn-two"
-            >
-              Веб сайт
-            </button>
+            <button type="button" class="btn-two">Веб сайт</button>
           </li>
           <li class="btn-item">
-            <button
-              type="button"
-              style="font-family: 'Roboto', sans-serif"
-              class="btn-three"
-            >
-              Приложение
-            </button>
+            <button type="button" class="btn-three">Приложение</button>
           </li>
           <li class="btn-item">
-            <button
-              type="button"
-              style="font-family: 'Roboto', sans-serif"
-              class="btn-four"
-            >
-              Дизайн
-            </button>
+            <button type="button" class="btn-four">Дизайн</button>
           </li>
           <li class="btn-item">
-            <button
-              type="button"
-              style="font-family: 'Roboto', sans-serif"
-              class="btn-five"
-            >
-              Маркетинг
-            </button>
+            <button type="button" class="btn-five">Маркетинг</button>
           </li>
         </ul>
 
