--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
         >Web <span class="footer-logo">Studio</span></a
       >
       <address class="adres">г. Киев, пр-т Леси Украинки, 26</address>
-      <a href="mailto:info@devstudio.com" class="footer-link-mail link"
-        >info@devstudio.com</a
+      <a href="mailto:info@example.com" class="footer-link-mail link"
+        >info@example.com</a
       >
       <a href="tel:+380961111111" class="footer-link-tel link"
         >+38 096 111 11 11</a
