--- a/portfolio.html
+++ b/portfolio.html
@@ -17,12 +17,8 @@
     <!--Шапка-->
     <header class="header">
       <nav class="header-navigation">
-        <a
-          href="./index.html"
-          class="header-link-logo"
-          lang="en"
-          style="font-family: 'Raleway', sans-serif"
-          >Web <span class="logo">Studio</span></a
+        <a href="./index.html" class="header-link-logo" lang="en">
+          Web <span class="logo">Studio</span></a
         >
         <ul class="header-list">
           <li class="header-item">
@@ -49,19 +45,19 @@
         <!--Кнопки навигации-->
         <ul class="btn-list">
           <li class="btn-item">
-            <button type="button" class="btn-one">Все</button>
+            <button type="button" class="btn-nav-prtf">Все</button>
           </li>
           <li class="btn-item">
-            <button type="button" class="btn-two">Веб сайт</button>
+            <button type="button" class="btn-nav-prtf">Веб сайт</button>
           </li>
           <li class="btn-item">
-            <button type="button" class="btn-three">Приложение</button>
+            <button type="button" class="btn-nav-prtf">Приложение</button>
           </li>
           <li class="btn-item">
-            <button type="button" class="btn-four">Дизайн</button>
+            <button type="button" class="btn-nav-prtf">Дизайн</button>
           </li>
           <li class="btn-item">
-            <button type="button" class="btn-five">Маркетинг</button>
+            <button type="button" class="btn-nav-prtf">Маркетинг</button>
           </li>
         </ul>
 
@@ -171,8 +167,8 @@
         >Web <span class="footer-logo">Studio</span></a
       >
       <address class="adres">г. Киев, пр-т Леси Украинки, 26</address>
-      <a href="mailto:info@devstudio.com" class="footer-link-mail link"
-        >info@devstudio.com</a
+      <a href="mailto:info@example.com" class="footer-link-mail link"
+        >info@example.com</a
       >
       <a href="tel:+380961111111" class="footer-link-tel link"
         >+38 096 111 11 11</a
